--- a/trunk/css/main.css
+++ b/trunk/css/main.css
@@ -11,9 +11,9 @@ body
 
 #mainContainer
 {
-margin-left: auto;
-margin-right: auto;
-padding: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
     width: 1000px;
 	overflow: hidden;
 	padding:10px;
@@ -22,6 +22,24 @@ padding: 10px;
 	background-color: white;
 }
 
+#banner
+{
+	display:block;
+	clear:both;
+}
+#banner img
+{
+	float:left;
+}
+#banner .contact
+{
+	float:right;
+	margin-top:30px;
+	text-align:right;
+	font-family:Arial;
+	font-size:14px;
+}
+ 
 #mainContainer #nav
 {
 	margin: 0;
@@ -29,6 +47,7 @@ padding: 10px;
 	padding:10px 0px 10px 0px;
 	display: block;
 	background-color: dimGray;
+	clear:both;
 }
 
 #mainContainer #nav a
@@ -77,20 +96,51 @@ padding: 10px;
 {
 	float:left;
 	width:100%;
-	margin:10px;
-	display:inline-block;
+	margin:10px 0 10px 0;
 	display:block;
+	clear:both;
+}
 
+div.row div.cell
+{
+	display:block;
+	border:1px solid lightGray;
+	width:31%;
+	float:left;
+	height:320px;
+	margin:4px;
+	padding:5px 5px 5px 5px;
+}
+
+div.row div.cell a
+{
+	text-decoration:none;
+	color:black;
+}
+
+div.row div.cell div
+{
+	margin:0 0 10px 0;
+	height:auto;
+	overflow:hidden;
+	width:100%;
+	font-size:1em;
+}
+
+div.row div.cell .headText
+{
+	text-align:center;
+	font-weight:bold;
+	clear:both;
+	font-family:sans-serif;
+	font-size:14px;
 }
  
 #mainContainer #mainContent div.row img
 {
 	float:left;
-	margin:0 10px 0 0;
-	margin: 0 10px 10px 0;
-	
+	margin: 0px;
 }
- 
 
 #mainContainer #mainContent .buttonBar 
 {
@@ -110,7 +160,10 @@ padding: 10px;
 	margin:10px;
 }
 
- 
+a img {
+    border: 0px;
+}
+
 #footer
 {
 	color: #444;
@@ -167,4 +220,14 @@ textArea
 textarea.vanadium-invalid
 {
 	color:gray;
+}
+
+.alignmiddle
+{
+	text-align:center;
+}
+
+.thick 
+{
+font-weight:bold; 
 }
