--- a/trunk/css/main.css
+++ b/trunk/css/main.css
@@ -115,9 +115,11 @@ div.row div.cell
 div.row div.box
 {
 	display:block;
-	width:auto;
+	border:1px dashed lightGray;
+	width:31%;
 	float:left;
-	margin:10px;
+	height:120px;
+	margin:5px;
 	padding:5px;
 }
 
@@ -126,8 +128,17 @@ div.row div.box a div
 	display:block;
 	clear:both;
 	text-decoration:none;
+	 text-align:center;
 }
 
+div.row div.box img
+{
+	display:inline-block;
+	margin-left: auto;
+    margin-right: auto;
+	
+	text-align:center;
+}
 div.row div.cell a
 {
 	text-decoration:none;
